# Pineapple-Gooey

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
